--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,14 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.0
+  firebase_core: ^1.3.0
   flutter:
     sdk: flutter
   get: ^4.3.8
+  google_sign_in: ^5.0.7
+
+  flutter_facebook_auth: "^3.5.0"
 
 dev_dependencies:
   flutter_test:
