--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,15 +21,15 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^2.5.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.0
   firebase_core: ^1.3.0
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^3.5.0
   get: ^4.3.8
   google_sign_in: ^5.0.7
-
-  flutter_facebook_auth: "^3.5.0"
 
 dev_dependencies:
   flutter_test:
