--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_facebook_auth: ^3.5.0
   get: ^4.3.8
   google_sign_in: ^5.0.7
+  path: ^1.8.0
+  sqflite: ^2.0.0+4
 
 dev_dependencies:
   flutter_test:
