--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get: ^4.3.8
   google_sign_in: ^5.0.7
   path: ^1.8.0
+  shared_preferences: ^2.0.7
   sqflite: ^2.0.0+4
 
 dev_dependencies:
